Modification de la side bar qui était juste pas possible... Ajout d'un bouton menu en fixed en haut à droite avec fond blanc et z-index sur 1000, modif de la side bar, reste à styliser ... Ca bosse même le week end O:)

--- a/css/buttonMainPage.css
+++ b/css/buttonMainPage.css
@@ -1,6 +1,6 @@
 #bandeau {
-  width: 5vw;
-  height: 100vh;
+  width: 100%;
+  height: 80px;
   position: fixed;
   top: 0px;
   right: 0px;
